# image_reduce

./: README.md  image_reduce.py  pyproject.toml
tests/: test_image_compress.py
